--- a/deploy.yml
+++ b/deploy.yml
@@ -5,7 +5,7 @@
   become: false
   
   vars:
-    app_dir: /Users/antonisaev/edtonai
+    app_dir: "{{ lookup('env', 'EDTONAI_PATH') | default('/Users/antonisaev/edtonai', true) }}"
     
   tasks:
     - name: Check if Docker is installed
