--- a/.env.example
+++ b/.env.example
@@ -17,5 +17,10 @@ AI_MAX_TOKENS=8192
 AI_TIMEOUT_SECONDS=120
 AI_MAX_RETRIES=3
 
+
 # Logging
 LOG_LEVEL=INFO
+
+# Supabase Configuration
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your-anon-key-here
