--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -14,7 +14,11 @@ server {
     # Proxy API requests to backend
     # /api/v1/... -> http://backend:8000/v1/...
     location /api/ {
-        proxy_pass http://backend:8000/;
+        # Use a variable for the upstream to allow dynamic configuration
+        # Note: resolver is needed when using variables for proxy_pass
+        resolver 8.8.8.8;
+        set $backend_upstream "${BACKEND_URL}";
+        proxy_pass $backend_upstream;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -31,6 +35,14 @@ server {
     location /assets/ {
         expires 1y;
         add_header Cache-Control "public, immutable";
+    }
+
+    # Explicitly serve the PDF worker file from root
+    location = /pdf.worker.min.mjs {
+        root /usr/share/nginx/html;
+        types {
+            application/javascript mjs;
+        }
     }
 
     # SPA fallback - serve index.html for all routes
