--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,29 @@
     "format": "prettier --write \"src/**/*.{ts,tsx,css}\""
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.2",
+    "@supabase/supabase-js": "^2.91.1",
     "@tanstack/react-query": "^5.17.0",
+    "@types/file-saver": "^2.0.7",
+    "clsx": "^2.1.1",
     "diff": "^5.1.0",
+    "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
+    "framer-motion": "^12.29.0",
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.303.0",
+    "mammoth": "^1.11.0",
+    "pdfjs-dist": "^5.4.530",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.0"
+    "react-i18next": "^16.5.3",
+    "react-router-dom": "^6.21.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@types/diff": "^5.0.9",
+    "@types/node": "^20.10.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
@@ -34,6 +48,6 @@
     "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
-    "@types/node": "^20.10.0"
+    "vite-plugin-static-copy": "^3.1.6"
   }
 }
